--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "javascript-action",
+  "name": "notion-backup-action",
   "version": "1.0.0",
-  "description": "JavaScript Action Template",
+  "description": "Push notion.so asset export to github",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
@@ -11,19 +11,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
+    "url": "git+https://github.com/QuintenDegraeve/notion-backup-action.git"
   },
   "keywords": [
     "GitHub",
     "Actions",
-    "JavaScript"
+    "JavaScript",
+    "Notion"
   ],
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
+    "url": "https://github.com/QuintenDegraeve/notion-backup-action/issues"
   },
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "homepage": "https://github.com/QuintenDegraeve/notion-backup-action#readme",
   "dependencies": {
     "@actions/core": "^1.1.1",
     "node-fetch": "^2.6.0"
