--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: "units-test"
+name: "Test action"
 on:
   pull_request:
   push:
@@ -8,18 +8,19 @@ on:
 
 jobs:
   # unit tests
-  units:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - run: npm ci
-    - run: npm test
+  # units:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - run: npm ci
+  #   - run: npm test
 
   # test action works running from the graph
-  test:
+  use-action:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: ./
       with:
-        milliseconds: 1000
+        notion_cookie: ${{ secrets.NOTION_COOKIE }}
+        notion_space_id: ${{ secrets.NOTION_SPACE_ID }}
