--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,12 @@
 name: 'Notion backup'
 description: 'Push notion.so asset export to github'
+inputs:
+  notion_cookie:
+    description: 'Notion cookie that is used when fetching data'
+    required: true
+  notion_space_id: 
+    description: 'Your notion space ID'
+    required: true
 outputs:
   url: # output will be available to future steps
     description: 'Download url of asset export'
