--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         notion_space_id: ${{ secrets.NOTION_SPACE_ID }}
     - name: Download notion export file
       run: >
-        echo "Downloading ${steps.notion_export.outputs.url}"
-        /usr/bin/curl -o master.zip ${steps.notion_export.outputs.url}
+        echo "${steps.notion_export.outputs.url}"
+        #/usr/bin/curl -o master.zip ${steps.notion_export.outputs.url}
     - name: List files after download 
       run: ls -al
