--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,8 +29,6 @@ jobs:
         notion_cookie: ${{ secrets.NOTION_COOKIE }}
         notion_space_id: ${{ secrets.NOTION_SPACE_ID }}
     - name: Download notion export file
-      run: >
-        echo "${{ steps.notion_export.outputs.url }}"
-        /usr/bin/curl -o master.zip ${{ steps.notion_export.outputs.url }}
+      run: echo "${{ steps.notion_export.outputs.* }}"
     - name: List files after download 
       run: ls -al
