--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,6 @@ jobs:
         notion_cookie: ${{ secrets.NOTION_COOKIE }}
         notion_space_id: ${{ secrets.NOTION_SPACE_ID }}
     - name: Download notion export file
-      run: echo "${{ steps.notion_export.outputs[0] }}"
+      run: echo "${{ steps.notion_export.outputs }}"
     - name: List files after download 
       run: ls -al
