--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,6 @@ jobs:
     - name: Download notion export file
       run: > 
         echo "Downloading ${{ steps.notion_export.outputs.notion_url }}"
-        /usr/bin/curl -o master.zip ${{ steps.notion_export.outputs.notion_url }}
+        /usr/bin/curl -o master.zip "${{ steps.notion_export.outputs.notion_url }}"
     - name: List files after download 
       run: ls -al
