Changing yaml formatting for multiline

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
         notion_cookie: ${{ secrets.NOTION_COOKIE }}
         notion_space_id: ${{ secrets.NOTION_SPACE_ID }}
     - name: Download notion export file
-      run: > 
+      run: | 
         echo "Downloading ${{ steps.notion_export.outputs.notion_url }}"
         /usr/bin/curl -o master.zip "${{ steps.notion_export.outputs.notion_url }}"
     - name: List files after download 
