--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: List files on start-up 
       run: ls -al
+    - name: Clean-up
+      run: |
+        rm -rf ./generated/
+    - name: List files after clean-up 
+      run: ls -al
     - name: Get notion export file
       id: notion_export
       uses: ./
@@ -32,5 +37,14 @@ jobs:
       run: | 
         echo "Downloading ${{ steps.notion_export.outputs.notion_url }}"
         /usr/bin/curl -o master.zip "${{ steps.notion_export.outputs.notion_url }}"
-    - name: List files after download 
+    - name: Unzipping notion export
+      run: unzip master.zip -d ./generated/notion
+    - name: List files after download & extract 
       run: ls -al
+    - name: Deploy to notion branch
+      uses: s0/git-publish-subdir-action@develop
+      env:
+        REPO: self
+        BRANCH: notion
+        FOLDER: generated/notion
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
