--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,18 +28,29 @@ jobs:
         rm -rf ./generated/gh-pages
     - name: List files after clean-up 
       run: ls -al
-    - name: Get notion export file
-      id: notion_export
+    - name: Get notion export markdown files
+      id: notion_export_markdown
       uses: ./
       with:
         notion_cookie: ${{ secrets.NOTION_COOKIE }}
         notion_space_id: ${{ secrets.NOTION_SPACE_ID }}
-    - name: Download notion export file
+        notion_export_type: 'markdown'
+    - name: Get notion export html files
+      id: notion_export_html
+      uses: ./
+      with:
+        notion_cookie: ${{ secrets.NOTION_COOKIE }}
+        notion_space_id: ${{ secrets.NOTION_SPACE_ID }}
+        notion_export_type: 'html'
+    - name: Download exported notion files
       run: | 
-        echo "Downloading ${{ steps.notion_export.outputs.notion_url }}"
-        /usr/bin/curl -o master.zip "${{ steps.notion_export.outputs.notion_url }}"
-    - name: Unzipping notion export
-      run: unzip master.zip -d ./generated/notion
+        # echo "Downloading ${{ steps.notion_export_export.outputs.notion_url }}"
+        /usr/bin/curl -o markdown.zip "${{ steps.notion_export_export.outputs.notion_url }}"
+        /usr/bin/curl -o html.zip "${{ steps.notion_export_html.outputs.notion_url }}"
+    - name: Unzipping notion archive files
+      run: |
+        unzip markdown.zip -d ./generated/notion
+        unzip html.zip -d ./generated/gh-pages
     - name: List files after download & extract 
       run: ls -al
     - name: Deploy to notion branch
@@ -48,4 +59,11 @@ jobs:
         REPO: self
         BRANCH: notion
         FOLDER: generated/notion
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Deploy to gh-pages branch
+      uses: s0/git-publish-subdir-action@develop
+      env:
+        REPO: self
+        BRANCH: gh-pages
+        FOLDER: generated/gh-pages
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
